@@ -1,9 +1,7 @@
 module RecordFilter
   class Filter
 
-    delegate :inspect, :to => :loaded_data
-
-    NON_DELEGATE_METHODS = %w(debugger nil? send object_id class extend find respond_to? first last)
+    NON_DELEGATE_METHODS = %w(nil? send object_id class extend find size count sum average maximum minimum paginate first last empty? any? respond_to?)
     [].methods.each do |m|
       unless m =~ /^__/ || NON_DELEGATE_METHODS.include?(m.to_s)
         delegate m, :to => :loaded_data
@@ -40,11 +38,33 @@ module RecordFilter
       end
     end
 
+    def size
+      @loaded_data ? @loaded_data.length : count
+    end
+
+    def empty?
+      @loaded_data ? @loaded_data.empty? : count.zero?
+    end
+
+    def any?
+      if block_given?
+        loaded_data.any? { |*block_args| yield(*block_args) }
+      else
+        !empty?
+      end
+    end
+
     def filter(&block)
       do_with_scope do
         Filter.new(@clazz, nil, &block)
       end
     end
+
+    def proxy_options(count_query=false)
+      @query.to_find_params(count_query)
+    end
+
+    protected
 
     def method_missing(method, *args, &block)
       if @clazz.named_filters.include?(method)
@@ -52,15 +72,14 @@ module RecordFilter
           Filter.new(@clazz, method, *args)
         end
       else
-        do_with_scope([:size, :length, :count].include?(method)) do
+        do_with_scope(method == :count) do
           @clazz.send(method, *args, &block)
         end
       end
     end
 
-    def do_with_scope(for_count=false, &block)
-      params = proxy_options(for_count)
-      @clazz.send(:with_scope, { :find => params, :create => params }, :reverse_merge) do
+    def do_with_scope(count_query=false, &block)
+      @clazz.send(:with_scope, { :find => proxy_options(count_query), :create => proxy_options(count_query) }, :reverse_merge) do
         if @current_scoped_methods
           @clazz.send(:with_scope, @current_scoped_methods) do
             block.call
@@ -70,12 +89,6 @@ module RecordFilter
         end
       end
     end
-
-    def proxy_options(for_count=false) 
-      @query.to_find_params(for_count)
-    end
-
-    protected
 
     def dsl_for_named_filter(clazz, named_filter)
       return DSL::DSL.create(clazz) if named_filter.blank?
@@ -88,7 +101,7 @@ module RecordFilter
     end
 
     def loaded_data
-      do_with_scope do
+      @loaded_data ||= do_with_scope do
         @clazz.find(:all)
       end
     end
